[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menus/Networking/NetworkSetup.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0, 0, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="NetworkSetup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.196078, 0.25098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiplayerConfigure" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerConfigure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -45.0
margin_right = 100.0
margin_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="LineEdit" parent="MultiplayerConfigure/VBoxContainer"]
margin_right = 200.0
margin_bottom = 31.0
expand_to_text_length = true
placeholder_text = "Enter username"
caret_blink = true

[node name="CreateServer" type="Button" parent="MultiplayerConfigure/VBoxContainer"]
margin_top = 41.0
margin_right = 200.0
margin_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinServer" type="Button" parent="MultiplayerConfigure/VBoxContainer"]
margin_top = 106.0
margin_right = 200.0
margin_bottom = 161.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerIPAddress" type="LineEdit" parent="MultiplayerConfigure/VBoxContainer"]
margin_top = 171.0
margin_right = 200.0
margin_bottom = 202.0
expand_to_text_length = true
placeholder_text = "Enter IP address"
caret_blink = true

[node name="JoinErrorMsg" type="Label" parent="MultiplayerConfigure/VBoxContainer"]
visible = false
margin_top = 143.0
margin_right = 200.0
margin_bottom = 166.0
custom_styles/normal = SubResource( 1 )
text = "Failed to join server"
align = 1
valign = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DeviceIPAddress" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -57.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_changed" from="MultiplayerConfigure/VBoxContainer/Username" to="." method="_on_Username_text_changed"]
[connection signal="pressed" from="MultiplayerConfigure/VBoxContainer/CreateServer" to="." method="_on_CreateServer_pressed"]
[connection signal="pressed" from="MultiplayerConfigure/VBoxContainer/JoinServer" to="." method="_on_JoinServer_pressed"]
